compiling_error.txt
/Users/ji/Library/Mobile Documents/com~apple~CloudDocs/UOU/2018/프밍II/source/test.c:82:1: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
main()
^
/Users/ji/Library/Mobile Documents/com~apple~CloudDocs/UOU/2018/프밍II/source/test.c:84:11: warning: incomplete format specifier [-Wformat]
  printf("%")
          ^
/Users/ji/Library/Mobile Documents/com~apple~CloudDocs/UOU/2018/프밍II/source/test.c:84:14: error: expected ';' after expression
  printf("%")
             ^
             ;
2 warnings and 1 error generated.
